--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "diffformer"
 version = "0.1.0"
 description = "Diffusion-based transformer model for language modeling"
 authors = [{ name = "Kelsey Sorrels", email = "kelsey.d.sorrels+diffformer@gmail.com" }]
+requires-python = ">= 3.10"
 dependencies = [
     "torch>=2.1.0",
     "matplotlib",
