--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,13 @@ dependencies = [
     "torch>=2.1.0",
     "matplotlib",
     "nltk",
-    "ptflops"
+    "ptflops",
+    "requests>=2.32.3",
+    "transformers>=4.51.1",
+    "datasets>=3.5.0",
+    "termcolor>=3.0.1",
+    "torchdiffeq>=0.2.5",
+    "torchviz>=0.0.3",
 ]
 
 [tool.pdm]
